--- a/WeaveUI/src/weave/visualization/tools/BarChartTool.mxml
+++ b/WeaveUI/src/weave/visualization/tools/BarChartTool.mxml
@@ -82,7 +82,7 @@
 			
 			override public function getSelectableAttributeNames():Array
 			{
-				return [ lang("Height"), lang("Sort"), lang("Color")];
+				return [ "Height", "Sort", "Color"];
 			}
 			override public function getSelectableAttributes():Array
 			{
@@ -92,7 +92,7 @@
 			private function updateAxisLabels():void
 			{
 				if (!panelTitle.value)
-					title = lang("Bar Chart of ") + ColumnUtils.getTitle(_plotter.yBarEnd) + lang(" sorted by ") + ColumnUtils.getTitle(_plotter.sortColumn);
+					title = lang("Bar Chart of ") + ColumnUtils.getTitle(_plotter.yBarEnd) + " sorted by " + ColumnUtils.getTitle(_plotter.sortColumn);
 				xAxisLayer.axisPlotter.setSideAxisName(lang("Sorted by: ")+ColumnUtils.getTitle(_plotter.sortColumn), 0, 0, visualization.marginBottomNumber.value - 3, BitmapText.VERTICAL_ALIGN_BOTTOM);
 				yAxisLayer.axisPlotter.setSideAxisName(ColumnUtils.getTitle(_plotter.yBarEnd), -90, -visualization.marginLeftNumber.value, 0, BitmapText.VERTICAL_ALIGN_TOP);
 			}
@@ -104,7 +104,7 @@
 			
 			private function alphaSliderFormatFunction(item:Number):String {
             	//return int(100 - (item * 100)) + "% Transparent";
-            	return int((item * 100)) + lang("% Opaque") + "\n" + int(100 - (item * 100)) + lang("% Transparent");
+            	return int((item * 100)) + "% Opaque" + "\n" + int(100 - (item * 100)) + "% Transparent";
             }
 			
 		]]>
@@ -139,8 +139,8 @@
 										minimum="0.3" maximum="1.0" value="1.0"
 										liveDragging="true"/>
 						</mx:HBox>
-						<mx:CheckBox id="linkSortingToHeightCheck" fontSize="12" label="Sort"
-									 toolTip="{lang('Link the column used for sorting the bar order to the column used to set the height of the bars.  Checking this will make it so that if you change the bar height attribute, the bars will be sorted to match this column.  Unchecking this unlink these columns so the sorting can be set separately, but will still be sorted by the previous height column until set otherwise."/>
+						<mx:CheckBox id="linkSortingToHeightCheck" fontSize="12" label="{lang('Sort')}"
+									 toolTip="{lang('Link the column used for sorting the bar order to the column used to set the height of the bars.  Checking this will make it so that if you change the bar height attribute, the bars will be sorted to match this column.  Unchecking this unlink these columns so the sorting can be set separately, but will still be sorted by the previous height column until set otherwise.')}"/>
 						<ui:DynamicColumnComponent visTool="{this}" label="{lang('height')}" creationComplete="event.target.dynamicObject = _plotter.yBarEnd"/>
 						<ui:DynamicColumnComponent visTool="{this}" label="{lang('sort')}" creationComplete="event.target.dynamicObject = _plotter.sortColumn"/>
 						<ui:DynamicColumnComponent visTool="{this}" label="{lang('color')}" creationComplete="event.target.dynamicObject = colorColumn"/>
