--- a/WeaveUI/src/weave/visualization/tools/CompoundRadVizTool.mxml
+++ b/WeaveUI/src/weave/visualization/tools/CompoundRadVizTool.mxml
@@ -196,7 +196,7 @@ along with Weave.  If not, see <http://www.gnu.org/licenses/>.
 			
 			override public function getSelectableAttributeNames():Array
 			{
-				return [lang("Size"),lang("Color"),lang("Anchor Dimensions")];
+				return ["Size","Color","Anchor Dimensions"];
 			}
 			
 			override public function getSelectableAttributes():Array
