--- a/WeaveUI/src/weave/visualization/tools/ParallelCoordinatesTool.mxml
+++ b/WeaveUI/src/weave/visualization/tools/ParallelCoordinatesTool.mxml
@@ -132,7 +132,7 @@
 				return "";
 			}
 			
-			private var axisPrefix:String =  "Axis for: ";
+			private var axisPrefix:String =  lang("Axis for: ");
 			private function handleColumnAddRemoveReorder():void
 			{
 				var removedName:String = _plotter.columns.childListCallbacks.lastNameRemoved;
@@ -209,7 +209,7 @@
 			{
 				// try to get unique attribute names separated by commas
 				// should probably be unique names for parallel coordinates, single name for line chart with years listed...?
-				var newTitle:String = "Parallel Coordinates of ";
+				var newTitle:String = lang("Parallel Coordinates of ");
 				
 				var uniqueColumns:Dictionary = new Dictionary();
 				
@@ -224,7 +224,7 @@
 
 			private function alphaSliderFormatFunction(value:Number):String {
 				//return int(100 - (value * 100)) + "% Transparent";
-				return int((value * 100)) + "% Opaque" + "\n" + int(100 - (value * 100)) + "% Transparent";
+				return int((value * 100)) + lang("% Opaque") + "\n" + int(100 - (value * 100)) + lang("% Transparent");
 			}
 			
 			// add a new axis
@@ -271,7 +271,7 @@
 	<mx:Number id="controlsFontSize">10</mx:Number>
 	<ui:ControlPanel>
 		<mx:Panel id="attributesPanel" 
-				  label="Attributes for Line Chart" 
+				  label="{lang('Attributes for Line Chart')}" 
 				  headerHeight="2"
 				  borderColor="0x000000" 
 				  backgroundColor="0xCCCCCC" 
@@ -281,11 +281,11 @@
 				  width="100%" 
 				  borderAlpha="0.2" 
 				  borderStyle="none">
-			<ui:DynamicColumnComponent label="Color" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = colorColumn"/>
-			<ui:ColumnListComponent label="Attributes along X axis" creationComplete="(event.target as ColumnListComponent).hashMap = _plotter.columns"/>
+			<ui:DynamicColumnComponent label="{lang('Color')}" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = colorColumn"/>
+			<ui:ColumnListComponent label="{lang('Attributes along X axis')}" creationComplete="(event.target as ColumnListComponent).hashMap = _plotter.columns"/>
 		</mx:Panel>
 		<mx:Panel id="VizControlsPanel" 
-				  label="Visualization Controls" 
+				  label="{lang('Visualization Controls')}" 
 				  headerHeight="2"
 				  borderColor="0x000000" 
 				  backgroundColor="0xCCCCCC" 
@@ -300,12 +300,12 @@
 				<mx:VBox width="100%" id="controls">
 					<mx:HBox borderStyle="inset" width="100%">
 						<mx:Label text="Shape:" color="0x000000" fontSize="{controlsFontSize}" 
-								  toolTip="This controls what shape is used to indicate the data points on the axes."/>
+								  toolTip="{lang('This controls what shape is used to indicate the data points on the axes.')}"/>
 						<ui:CustomComboBox id="shapeCombo" dataProvider="{ParallelCoordinatesPlotter.shapesAvailable}"/>
 						
 						<mx:Label text="{shapeCombo.selectedItem == ParallelCoordinatesPlotter.NO_SHAPE ? 'Gap' : 'Shape'} size:" 
 								  color="0x000000" fontSize="{controlsFontSize}" 
-								  toolTip="This controls the size of the shapes indicating the data points on the axes."/>
+								  toolTip="{lang('This controls the size of the shapes indicating the data points on the axes.')}"/>
 						<mx:HSlider id="shapeSizeSlider" 
 									width="100%" 
 									snapInterval="1"
@@ -317,9 +317,9 @@
 					
 					<mx:HBox borderStyle="inset" width="100%">
 						<mx:HBox horizontalGap="0">
-							<mx:Label text="Border color:" color="0x000000" fontSize="{controlsFontSize}"/>
+							<mx:Label text="{lang('Border color:')}" color="0x000000" fontSize="{controlsFontSize}"/>
 							<mx:ColorPicker id="shapeBorderColorPicker"
-											toolTip="This controls color of the border around the shape at each point."
+											toolTip="{lang('This controls color of the border around the shape at each point.')}"
 											enabled="{!(shapeCombo.selectedItem == ParallelCoordinatesPlotter.NO_SHAPE || 
 											shapeCombo.selectedItem == ParallelCoordinatesPlotter.EMPTY_CIRCLE ||
 											shapeCombo.selectedItem == ParallelCoordinatesPlotter.EMPTY_SQUARE ||
@@ -327,8 +327,8 @@
 						</mx:HBox>
 						
 						<mx:HBox width="100%" horizontalGap="0">
-							<mx:Label text="Border thickness:" color="0x000000" fontSize="{controlsFontSize}" 
-									  toolTip="This controls the border size of the shapes indicating the data points on the axes."/>
+							<mx:Label text="{lang('Border thickness:')}" color="0x000000" fontSize="{controlsFontSize}" 
+									  toolTip="{lang('This controls the border size of the shapes indicating the data points on the axes.')}"/>
 							<mx:HSlider id="shapeBorderSizeSlider" 
 										width="100%" 
 										snapInterval="1"
@@ -341,9 +341,9 @@
 					</mx:HBox>
 					
 					<mx:HBox borderStyle="inset" width="100%">
-						<mx:Label text="Line Opacity:" 
+						<mx:Label text="{lang('Line Opacity:')}" 
 								  color="0x000000" fontSize="{controlsFontSize}" 
-								  toolTip="Use this control to see how transparent lines are.  Moving left increases transparency (decreased opacity), moving to the right decreases transparency (increased opacity) up to fully opaque (no transparency)."/>
+								  toolTip="{lang('Use this control to see how transparent lines are.  Moving left increases transparency (decreased opacity), moving to the right decreases transparency (increased opacity) up to fully opaque (no transparency).')}"/>
 						
 						<mx:HSlider id="alphaSlider" 
 									width="100%" 
@@ -356,18 +356,18 @@
 					
 					
 					<mx:HBox borderStyle="inset" width="100%">
-						<mx:Label text="Line Curvature:" 
+						<mx:Label text="{lang('Line Curvature:')}" 
 								  color="0x000000" fontSize="{controlsFontSize}" 
 								  toolTip=""/>
 						
 						<mx:RadioButtonGroup id="curvatureButtons" />
-						<mx:RadioButton label="Straight Line" value="ParallelCoordinatesPlotter.LINE_STRAIGHT" 		 	groupName="curvatureButtons"/>
+						<mx:RadioButton label="{lang('Straight Line')}" value="ParallelCoordinatesPlotter.LINE_STRAIGHT" 		 	groupName="curvatureButtons"/>
 						<!--<mx:RadioButton label="Away"          value="ParallelCoordinatesPlotter.LINE_CURVE_AWAY" 		groupName="curvatureButtons"/>
 						<mx:RadioButton label="Towards"       value="ParallelCoordinatesPlotter.LINE_CURVE_TOWARDS" 	groupName="curvatureButtons"/>-->
-						<mx:RadioButton label="Double"        value="ParallelCoordinatesPlotter.LINE_DOUBLE_CURVE"  	groupName="curvatureButtons"/>
+						<mx:RadioButton label="{lang('Double')}"        value="ParallelCoordinatesPlotter.LINE_DOUBLE_CURVE"  	groupName="curvatureButtons"/>
 					</mx:HBox>
 					<mx:HBox borderStyle="inset" width="100%">
-						<mx:Label text="Line Thickness:" 
+						<mx:Label text="{lang('Line Thickness:')}" 
 								  color="0x000000" fontSize="{controlsFontSize}" 
 								  toolTip=""/>
 						
@@ -378,7 +378,7 @@
 						<mx:RadioButton label="4" value="4"  groupName="thickessButtons"/>
 					</mx:HBox>
 					<mx:HBox borderStyle="inset" width="100%">
-						<mx:CheckBox id="resizeCheckBox" label="Show an independent axis for each column." toolTip="Checked:&#13;&#x09;Each point along the line will between the minimum and maximum of a given column when it crosses it.  Each column is normalized to fit its data, so this is designed for independent columns (Parallel Coordinates).  &#13;&#13;Unchecked:&#13;&#x09;Only one axis is shown on the left and has the absolute minimum and maximum of all the columns used.  This is intended for columns that are equivalent or comparable, using the same data scales.  This is the typical functionality for a Line Chart. "/>
+						<mx:CheckBox id="resizeCheckBox" label="{lang('Show an independent axis for each column.')}" toolTip="Checked:&#13;&#x09;Each point along the line will between the minimum and maximum of a given column when it crosses it.  Each column is normalized to fit its data, so this is designed for independent columns (Parallel Coordinates).  &#13;&#13;Unchecked:&#13;&#x09;Only one axis is shown on the left and has the absolute minimum and maximum of all the columns used.  This is intended for columns that are equivalent or comparable, using the same data scales.  This is the typical functionality for a Line Chart. "/>
 					</mx:HBox>
 				</mx:VBox>
 			</mx:VBox>
