--- a/WeaveUI/src/weave/visualization/tools/SP2.mxml
+++ b/WeaveUI/src/weave/visualization/tools/SP2.mxml
@@ -75,7 +75,7 @@
 			
 			override public function getSelectableAttributeNames():Array
 			{
-				return ["X","Y","Image"];
+				return ["X","Y",lang("Image")];
 			}
 			override public function getSelectableAttributes():Array
 			{
@@ -104,7 +104,7 @@
 			
 			override protected function get defaultPanelTitle():String
 			{
-				return "Scatter Plot of " + ColumnUtils.getTitle(_plotter.xColumn) + " -vs- " + ColumnUtils.getTitle(_plotter.yColumn);
+				return lang("Scatter Plot of ") + ColumnUtils.getTitle(_plotter.xColumn) + lang(" -vs- ") + ColumnUtils.getTitle(_plotter.yColumn);
 			}
 			
 			private function updateAxisLabels():void
@@ -132,7 +132,7 @@
 
 			private function alphaSliderFormatFunction(item:Number):String {
 				//return int(100 - (item * 100)) + "% Transparent";
-				return int((item * 100)) + "% Opaque" + "\n" + int(100 - (item * 100)) + "% Transparent";
+				return int((item * 100)) + lang("% Opaque") + "\n" + int(100 - (item * 100)) + lang("% Transparent");
 			}
 			
 			private function handleSizeByTextChange(event:Event):void
@@ -158,7 +158,7 @@
 	</mx:Script>
 	<ui:ControlPanel>
 			<mx:Panel id="VizControlsPanel" 
-					  label="Visualization Controls" 
+					  label="{lang('Visualization Controls')}" 
 					  headerHeight="2"
 					  borderColor="0x000000" 
 					  backgroundColor="0xCCCCCC" 
@@ -176,16 +176,16 @@
 								 borderStyle="inset" 
 								 backgroundColor="0xFFFFFF" 
 								 backgroundAlpha="0.7">
-							<mx:Label text="Point Opacity:" 
+							<mx:Label text="{lang('Point Opacity:')}" 
 									  color="0x000000" fontSize="12" 
-									  toolTip="Use this control to see how transparent points are.  Moving left increases transparency (decreased opacity), moving to the right decreases transparency (increased opacity) up to fully opaque (no transparency)."/>
+									  toolTip="{lang('Use this control to see how transparent points are.  Moving left increases transparency (decreased opacity), moving to the right decreases transparency (increased opacity) up to fully opaque (no transparency).')}"/>
 						</mx:HBox>
-						<mx:CheckBox id="probeColumnsCheckBox" label="Include tool attributes in probe tooltip"
-									 toolTip="Checking this box makes the x, y, color and size attributes visible in this tool's probe tooltip"
+						<mx:CheckBox id="probeColumnsCheckBox" label="{lang('Include tool attributes in probe tooltip')}"
+									 toolTip="{lang('Checking this box makes the x, y, color and size attributes visible in this tool\'s probe tooltip')}"
 									 creationComplete="linkBindableProperty(includeToolAttributesInProbe,event.target,'selected')"/>
-						<ui:DynamicColumnComponent visTool="{this}" label="x column" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = _plotter.xColumn"/>
-						<ui:DynamicColumnComponent visTool="{this}" label="y column" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = _plotter.yColumn"/>
-						<ui:DynamicColumnComponent visTool="{this}" label="image column" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = _plotter.imageURL.internalDynamicColumn"/>
+						<ui:DynamicColumnComponent visTool="{this}" label="{lang('x column')}" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = _plotter.xColumn"/>
+						<ui:DynamicColumnComponent visTool="{this}" label="{lang('y column')}" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = _plotter.yColumn"/>
+						<ui:DynamicColumnComponent visTool="{this}" label="{lang('image column')}" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = _plotter.imageURL.internalDynamicColumn"/>
 						<mx:VBox borderStyle="inset"
 								 backgroundColor="0xFFFFFF" 
 								 backgroundAlpha="0.7"
@@ -195,7 +195,7 @@
 								textSelectedColor="0xffffff" -->
 								<mx:CheckBox id="sizeByCheck" 
 											 fontSize="12" 
-											 label="Size by: ENABLED" 
+											 label="{lang('Size by: ENABLED')}" 
 											 color="{sizeByCheck.selected? 0x339900 : 0xCC3300}"
 											 textRollOverColor="0x339900"
 											 selected="true" 
@@ -206,7 +206,7 @@
 							
 							<!--<mx:Label text="[min, max]"  color="0xFFFFFF" visible="{sizeByCheck.selected}" fontSize="9"/-->
 							<mx:HBox width="100%"> 
-								<mx:Label text="Point Size:" 
+								<mx:Label text="{lang('Point Size:')}" 
 										  color="0x000000" 
 										  fontSize="12"/>
 								<!--change="handleSizeSliderChange(event)" minimum="{_minPointSize}" maximum="{_maxPointSize}"  dataTipFormatFunction="sizeSliderDataTipFormatFunction"-->
