--- a/WeaveUI/src/weave/visualization/tools/ScatterPlotTool.mxml
+++ b/WeaveUI/src/weave/visualization/tools/ScatterPlotTool.mxml
@@ -111,7 +111,7 @@
 			
 			override public function getSelectableAttributeNames():Array
 			{
-				return ["X", "Y", "Color", "Size"];
+				return ["X", "Y", lang("Color"), lang("Size")];
 			}
 			override public function getSelectableAttributes():Array
 			{
@@ -298,7 +298,7 @@
 				if(_tempBounds.containsPoint(_tempPoint))
 				{
 					_tempPoint = this.contentToGlobal(_tempPoint);
-					_toolTip = ToolTipManager.createToolTip("undefined x",_tempPoint.x, _tempPoint.y);	
+					_toolTip = ToolTipManager.createToolTip(lang("undefined x"),_tempPoint.x, _tempPoint.y);	
 					visualization.constrainToolTipsToStage(_toolTip);
 					return;
 				}
@@ -306,7 +306,7 @@
 				if(_tempBounds.containsPoint(_tempPoint))
 				{
 					_tempPoint = this.contentToGlobal(_tempPoint);
-					_toolTip = ToolTipManager.createToolTip("undefined y",_tempPoint.x, _tempPoint.y);
+					_toolTip = ToolTipManager.createToolTip(lang("undefined y"),_tempPoint.x, _tempPoint.y);
 					visualization.constrainToolTipsToStage(_toolTip);
 					return;
 				}
@@ -314,7 +314,7 @@
 				if(_tempBounds.containsPoint(_tempPoint))
 				{
 					_tempPoint = this.contentToGlobal(_tempPoint);
-					_toolTip = ToolTipManager.createToolTip("undefined x,y",_tempPoint.x, _tempPoint.y);
+					_toolTip = ToolTipManager.createToolTip(lang("undefined x,y"),_tempPoint.x, _tempPoint.y);
 					visualization.constrainToolTipsToStage(_toolTip);
 					return;
 				}   
@@ -351,7 +351,7 @@
 			
 			override protected function get defaultPanelTitle():String
 			{
-				return "Scatter Plot of " + ColumnUtils.getTitle(plotter.xColumn) + " -vs- " + ColumnUtils.getTitle(plotter.yColumn);
+				return lang("Scatter Plot of ") + ColumnUtils.getTitle(plotter.xColumn) + lang(" -vs- ") + ColumnUtils.getTitle(plotter.yColumn);
 			}
 			
 			override protected function childrenCreated():void
@@ -385,8 +385,8 @@
 						visCanvas.addChild(equationText);
 					var slope:Number = StandardLib.roundSignificant(_regressionPlotter.getSlope(), 4);
 					var intercept:Number = StandardLib.roundSignificant(_regressionPlotter.getIntercept(), 4);
-					lineEquation.text = "Equation: y = " + slope + "x"+ " + " + intercept;
-					equationText.text = "slope = " + slope + "\nintercept = " + intercept;
+					lineEquation.text = lang("Equation:") + " y = " + slope + "x"+ " + " + intercept;
+					equationText.text = lang("slope = ") + slope + "\n" + lang("intercept = ") + intercept;
 					equationText.validateNow();
 					// severely hacked
 					equationText.width = visualization.marginLeftNumber.value * 2;
@@ -396,7 +396,7 @@
 				{ 
 					if (equationText.parent)
 						equationText.parent.removeChild(equationText);
-					lineEquation.text = "Equation: y = mx + b";
+					lineEquation.text = lang("Equation: y = mx + b");
 				}
 			}
 			private function updateAxisLabels():void
@@ -440,7 +440,7 @@
 			
 			private function alphaSliderFormatFunction(item:Number):String {
 				//return int(100 - (item * 100)) + "% Transparent";
-				return int((item * 100)) + "% Opaque" + "\n" + int(100 - (item * 100)) + "% Transparent";
+				return int((item * 100)) + lang("% Opaque") + "\n" + int(100 - (item * 100)) + lang("% Transparent");
 			}
 			
 			
@@ -506,15 +506,15 @@
 		bottom="0"
 		left="0"/>
 	<ui:ControlPanel>
-		<mx:VBox id="VizControlsPanel" label="Visualization Controls">
-			<ui:DynamicColumnComponent visTool="{this}" label="x column" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = plotter.xColumn"/>
-			<ui:DynamicColumnComponent visTool="{this}" label="y column" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = plotter.yColumn"/>
-			<ui:DynamicColumnComponent visTool="{this}" label="color" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = colorColumn" showLinkControl="false"/>
-			<ui:DynamicColumnComponent visTool="{this}" label="size" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = plotter.radiusColumn"/>
+		<mx:VBox id="VizControlsPanel" label="{lang('Visualization Controls')}">
+			<ui:DynamicColumnComponent visTool="{this}" label="{lang('x column')}" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = plotter.xColumn"/>
+			<ui:DynamicColumnComponent visTool="{this}" label="{lang('y column')}" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = plotter.yColumn"/>
+			<ui:DynamicColumnComponent visTool="{this}" label="{lang('color')}" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = colorColumn" showLinkControl="false"/>
+			<ui:DynamicColumnComponent visTool="{this}" label="{lang('size')}" creationComplete="(event.target as DynamicColumnComponent).dynamicObject = plotter.radiusColumn"/>
 			<mx:HBox width="100%" verticalAlign="middle">
 				<mx:CheckBox id="sizeByCheck" label="Size by: {sizeByCheck.selected ? 'ENABLED' : 'DISABLED'}"/>
 				
-				<mx:Label text="Point Size:"/>
+				<mx:Label text="{lang('Point Size:')}"/>
 				<mx:HSlider id="sizeBySlider"
 							enabled="{sizeByCheck.selected}"
 							liveDragging="true"
@@ -528,8 +528,8 @@
 							mouseDown="event.stopImmediatePropagation();"/>
 			</mx:HBox>
 			<mx:HBox width="100%" verticalAlign="middle">
-				<mx:Label text="Point Opacity:" 
-						  toolTip="Use this control to see how transparent points are.  Moving left increases transparency (decreased opacity), moving to the right decreases transparency (increased opacity) up to fully opaque (no transparency)."/>
+				<mx:Label text="{lang('Point Opacity:')}" 
+						  toolTip="{lang('Use this control to see how transparent points are.  Moving left increases transparency (decreased opacity), moving to the right decreases transparency (increased opacity) up to fully opaque (no transparency).')}"/>
 				
 				<mx:HSlider id="alphaSlider" 
 							width="100%" 
@@ -538,27 +538,27 @@
 							minimum="0.1" maximum="1.0" value="1.0"
 							liveDragging="true"/>
 			</mx:HBox>
-			<mx:CheckBox id="probeColumnsCheckBox" label="Include tool attributes in probe tooltip"
-						 toolTip="Checking this box makes the x, y, color and size attributes visible in this tool's probe tooltip"
+			<mx:CheckBox id="probeColumnsCheckBox" label="{lang('Include tool attributes in probe tooltip')}"
+						 toolTip="{lang('Checking this box makes the x, y, color and size attributes visible in this tool\'s probe tooltip')}"
 						 creationComplete="linkBindableProperty(includeToolAttributesInProbe,event.target,'selected')"/>
-			<mx:Button label="Show legend" click="createLegend()"/>
+			<mx:Button label="{lang('Show legend')}" click="createLegend()"/>
 		</mx:VBox>
-		<mx:VBox id="AdvancedPanel" label="Advanced">
+		<mx:VBox id="AdvancedPanel" label="{lang('Advanced')}">
 			<mx:VBox>
-				<mx:CheckBox id="regressionLineCheckBox" label="Enable regression line"
-							 toolTip="Check this box to draw a regression line on the scatterplot"
+				<mx:CheckBox id="regressionLineCheckBox" label="{lang('Enable regression line')}"
+							 toolTip="{lang('Check this box to draw a regression line on the scatterplot')}"
 							 creationComplete="linkBindableProperty(_regressionPlotter.drawLine,event.target,'selected')"/>
 				<ui:Indent>
 					<mx:VBox>
-						<mx:Label id="lineEquation" text="Equation: y = mx + b"/>
+						<mx:Label id="lineEquation" text="{lang('Equation: y = mx + b')}"/>
 						<mx:HBox>
-							<mx:Label text="Line Color" />
+							<mx:Label text="{lang('Line Color'" />
 							<mx:ColorPicker id="regressionColorPicker" 
 											creationComplete="linkBindableProperty(_regressionPlotter.lineStyle.color.defaultValue, event.target, 'selectedColor')"
 											enabled="{regressionLineCheckBox.selected}"/>
 						</mx:HBox>
 						<mx:HBox>
-							<mx:Label text="Line Thickness" />
+							<mx:Label text="{lang('Line Thickness')}" />
 							<mx:HSlider id="regressionThicknessSlider"
 										creationComplete="linkBindableProperty(_regressionPlotter.lineStyle.weight.defaultValue, event.target, 'value')"
 										enabled="{regressionLineCheckBox.selected}"
@@ -566,7 +566,7 @@
 										tickInterval="1"/>
 						</mx:HBox>
 						<mx:HBox>
-							<mx:Label text="Line Opacity" />
+							<mx:Label text="{lang('Line Opacity')}" />
 							<mx:HSlider id="regressionAlphaSlider"
 										enabled="{regressionLineCheckBox.selected}"
 										minimum="0.1" maximum="1" snapInterval=".1" liveDragging="true"
@@ -577,7 +577,7 @@
 				</ui:Indent>
 			</mx:VBox>
 			<mx:HBox>
-				<mx:CheckBox id="colorOverrideCheckbox" label="Override Global Color" creationComplete="linkBindableProperty(showColorPicker,event.target,'selected')"/>
+				<mx:CheckBox id="colorOverrideCheckbox" label="{lang('Override Global Color')}" creationComplete="linkBindableProperty(showColorPicker,event.target,'selected')"/>
 				<mx:ColorPicker id="scatterplotColorOverride" creationComplete="linkBindableProperty(overrideColor,event.target,'selectedColor')"/>
 			</mx:HBox>
 		</mx:VBox>
