--- a/WeaveUI/src/weave/visualization/tools/MapTool.mxml
+++ b/WeaveUI/src/weave/visualization/tools/MapTool.mxml
@@ -41,12 +41,13 @@
 			import weave.api.linkSessionState;
 			import weave.api.primitives.IBounds2D;
 			import weave.api.registerLinkableChild;
+			import weave.api.ui.IPlotLayer;
 			import weave.api.ui.IVisTool;
 			import weave.core.LinkableBoolean;
 			import weave.core.LinkableString;
 			import weave.core.SessionManager;
+			import weave.core.UIUtils;
 			import weave.data.AttributeColumns.DynamicColumn;
-			import weave.data.AttributeColumns.FilteredColumn;
 			import weave.data.AttributeColumns.ReferencedColumn;
 			import weave.data.AttributeColumns.ReprojectedGeometryColumn;
 			import weave.primitives.Bounds2D;
@@ -480,6 +481,25 @@
 			
 			private function handleProjectionComboChange():void
 			{
+				if (UIUtils.hasFocus(projComboBox))
+				{
+					// clear all layer visibility settings because they are no longer valid in the new projection
+					visualization.layers.delayCallbacks();
+					for each (var layer:IPlotLayer in visualization.layers.getObjects(IPlotLayer))
+					{
+						if (layer is PlotLayer)
+						{
+							(layer as PlotLayer).minVisibleScale.value = 0;
+							(layer as PlotLayer).maxVisibleScale.value = Infinity;
+						}
+						if (layer is SelectablePlotLayer)
+						{
+							(layer as SelectablePlotLayer).minVisibleScale.value = 0;
+							(layer as SelectablePlotLayer).maxVisibleScale.value = Infinity;
+						}
+					}
+					visualization.layers.resumeCallbacks();
+				}
 				if (projectionVerifier(projComboBox.text))
 				{
 					projValidLabel.text = 'Valid';
